# ring-api

./: .env  Cargo.toml  Rocket.toml
migrations/2022-01-05-072515_user_table/: up.sql
src/: error.rs  main.rs  models.rs  schema.rs
