[package]
name = "ring-api"
version = "0.1.0"
authors = ["vapvin <vins@vins.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features=["json"]}
failure = { version = "0.1.8", features=["derive"]}
diesel = { version = "1.4.5", features = ["postgres"] }
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]